fix: alignement of header's elements

--- a/apps/gauzy/src/app/pages/time-off/table-components/request-approval-icon.scss
+++ b/apps/gauzy/src/app/pages/time-off/table-components/request-approval-icon.scss
@@ -11,7 +11,4 @@
 .badge-width {
   border-radius: nb-theme(border-radius);
   padding: 1px 8px 0 8px;
-  i {
-    font-size: 14px;
-  }
 }
